# twitch-v-bot

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLI_VALIDATION_REPORT.md  Dockerfile  IMPLEMENTATION_PLAN_CLI.md  IMPLEMENTATION_PLAN_TUI_GO.md  LICENSE  README.md  TUI_VALIDATION_REPORT.md  TWITCH_SKILL.md  deploy.sh  deploy_hf.sh  docker-compose.yml  failures.txt  hf-devops-2026.skill  mypy_output.txt  package-lock.json  package.json  pyproject.toml  stitch_investigation_report.md  test_ascii_quality.py  test_nebius_real.py  test_reasoning_quality.py  test_resiliency.py  twitch-gemini-bot-roadmap.md  ui-ux-skill.skill  validate_plan.sh
.github/workflows/: ci.yml
.mypy_cache/3.11/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.data.json  _decimal.meta.json  _heapq.data.json  _heapq.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  (+208 more)
bot/: .coverage  Dockerfile  access_control.py  ascii_art_runtime.py  autonomy_logic.py  autonomy_runtime.py  bootstrap_runtime.py  bot.py  byte_semantics.py  byte_semantics_base.py  byte_semantics_constants.py  byte_semantics_current_events.py  byte_semantics_quality.py  byte_semantics_reply.py  channel_control.py  channel_status.py  clip_jobs_runtime.py  clip_jobs_store.py  coaching_churn_risk.py  coaching_runtime.py  config.py  control_plane.py  control_plane_actions.py  control_plane_config.py  control_plane_config_helpers.py  control_plane_constants.py  dashboard_http_helpers.py  dashboard_parity_gate.py  dashboard_server.py  dashboard_server_routes.py  dashboard_server_routes_post.py  eventsub_runtime.py  heartbeat.py  hud_runtime.py  irc_connection.py  irc_handlers.py  irc_management.py  irc_protocol.py  irc_runtime.py  irc_state.py  (+49 more)
bot/tests/: audit_data_leak.py  conftest.py  scientific_shared.py  test_autonomy_logic.py  test_autonomy_logic_v2.py  test_autonomy_runtime.py  test_bootstrap_runtime.py  test_bootstrap_runtime_v2.py  test_bootstrap_runtime_v3.py  test_bootstrap_runtime_v4.py  test_byte_semantics_current_events_v2.py  test_byte_semantics_large.py  test_byte_semantics_reply.py  test_byte_semantics_reply_v2.py  test_channel_control.py  test_clip_jobs_runtime.py  test_clip_jobs_runtime_v2.py  test_clip_jobs_store.py  test_clip_jobs_store_v2.py  (+57 more)
cli/: __init__.py  __main__.py  client.py  config.py  formatters.py  main.py
dashboard/: App.tsx  README.md  app.js  channel-terminal.js  hud.html  index.html  main.js  metadata.json  package.json  styles.css  types.ts
docs/: AUDIT_REPORT_PHASES_6_9.md  Analise_twitch-v-bot.docx.md  BYTE_AGENT_HEALING_REPORT_2026-02-24.md  COMPREHENSIVE_CODE_AUDIT_REPORT_2026-02-26.md  CONTEXT_LEAK_AUDIT_REPORT_2026.md  DASHBOARD_VALIDATION_REPORT.md  DASHBOARD_VISUAL_UPGRADE_ROADMAP.md  DOCUMENTATION.md  GITHUB_VISUAL_ASSETS_2026.md  HF_SPACES_DEPLOY_RUNBOOK.md  IMPLEMENTATION_PLAN_DASHBOARD_OPERACIONAL_CACHE_SHORTCUTS_COMPACT.md  IMPLEMENTATION_PLAN_DASHBOARD_UX_ABAS_E_HIERARQUIA.md  IMPLEMENTATION_PLAN_EXECUTAVEL_PARIDADE_AGENT_DASHBOARD.md  IMPLEMENTATION_PLAN_ISOLAMENTO_CONTEXTO_MULTI_TENANT.md  IMPLEMENTATION_PLAN_PERSISTENCIA_STATEFUL_SUPABASE.md  INCIDENT_REPORT_REFATORACAO_PERSISTENCIA.md  INDEX.md  NIGHTBOT_COMPETITIVE_REPORT.md  OPERATIONS_GUIDE.md  PERSISTENCE_AUDIT_REPORT_2026.md  ROADMAP.md  ROADMAP_VALIDATION_REPORT.md  SETUP_2026_ANTI_BURRO.md  TEST_CORRECTION_REPORT.md  TWITCH_CLOUDRUN_RESEARCH.md  byte-costreamer-phases6-9-report.md  byte-costreamer-roadmap.md  byte-costreamer-validation-report.md  dashboard-audit.md  hf-spaces-secrets-report.md  production_status_forensics.md  setup_supabase_schema.sql  tactical_calendar_implementation_plan.md
scripts/: estimate_monthly_cost.sh
supabase/: config.toml
tests/: test_ascii_art_runtime.py
tui/: go.mod  go.sum  main.go
(+2021 files in other folders)
